--- a/app/assets/stylesheets/depot.css
+++ b/app/assets/stylesheets/depot.css
@@ -151,5 +151,11 @@
 	color: #bfb;
 	font-size: small;
 }
-	
-	
+
+#store .entry form, #store .entry form div {
+	display: inline;
+}
+
+.image_link {
+	border: 0;
+}
