--- a/app/assets/stylesheets/depot.css
+++ b/app/assets/stylesheets/depot.css
@@ -159,3 +159,19 @@
 .image_link {
 	border: 0;
 }
+
+/* Styles for the cart in the main page */
+
+#store .cart_title {
+	font: 120%;
+	font-weight: bold;
+}
+
+#store .item_price, #store .total_line {
+	text-align: right;
+}
+
+#store .total_line .total_cell {
+	font-weight: bold;
+	border-top: 1px solid #595;
+}
